# funcd2db

./: .gitignore  README.md  funcsv2db.py  pyproject.toml  sample-run.py  sample.py
doc/: csv2db.md  tree2db.md
sample-data/: config.csv  config.json  pangasinan-personal-pronouns.csv
sample/csv2db/: config.json  sample_csv.py
sample/tree2db/: sample_tree.py  tree.txt
src/: csv2db.py  tree2db.py
