[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funcd2db"
version = "0.0.1"
description = "Data processors to insert to database for use in Funcwords project."
license = "MIT"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "funcd2db"

